--- a/PaginaWeb/web.html
+++ b/PaginaWeb/web.html
@@ -99,7 +99,11 @@
                 <li><a href="#"><img src="./FotosPaginaWeb/youtubeLogoWeb.png" alt="Youtube"></a></li>
             </ul>
         </div>
-        <p>&copy; 2024 - 2028 Infogames - Política - Términos</p>
+        <p>Este trabajo está licenciado bajo
+            <img style="height:15px;margin-left:3px; vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt="">
+            <img style="height:15px;margin-left:3px; vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt="">
+            <img style="height:15px;margin-left:3px; vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nd.svg?ref=chooser-v1"alt=""></p>
+        <!-- <p>&copy; 2024 - 2028 Infogames - Política - Términos</p> -->
     </footer>
 </body>
 </html>
