--- a/PaginaWeb/web.html
+++ b/PaginaWeb/web.html
@@ -39,6 +39,7 @@
 
         <!-- Sección Elden Ring -->
         <section class="noticiasJuegos" id="noticias">
+            
             <div class="informacionJuegos">
                 <h2>Elden Ring</h2></br>
                 <p>
@@ -47,7 +48,7 @@
                     "Cambiada la opción por defecto en el mensaje Vale o Cancelar que aparece cuando utilizamos el Silbato de Corcel Espectral</br> mientras Torrentera está muerto. Ahora la posición por defecto será Vale".
                 </p>
                 <br>
-                <audio controls autoplay>
+                <audio id="audio" autoplay>
                     <source src="./FotosPaginaWeb/Skyrim Theme Song - Full (Dovahkiin Song).mp3">
                 </audio>
             </div>
@@ -82,6 +83,8 @@
             </div>
             <img src="./FotosPaginaWeb/EGS_EASPORTSFC25StandardEdition_EACanada_S1_2560x1440-f650d1a50a08e78279071d931145822a.jpeg" alt="EA Sports FC 25 Image" class="imagenJuego">
         </section>
+        <button id="muteButton" class="floating-button">🔊</button>
+
     </main>
 
     <!-- Footer -->
@@ -105,6 +108,7 @@
             <img style="height:15px;margin-left:3px; vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nd.svg?ref=chooser-v1"alt=""></p>
         <!-- <p>&copy; 2024 - 2028 Infogames - Política - Términos</p> -->
     </footer>
+    <script src="web.js"></script>
 </body>
 </html>
 
