Cambio de estilo de letra e inserccion de imagenes

--- a/PaginaWeb/web.html
+++ b/PaginaWeb/web.html
@@ -67,7 +67,7 @@
         </section>
 
         <!-- Sección Black Myth: Wukong -->
-        <section class="noticiasJuegos">
+        <section class="noticiasJuegosMedio">
             <img src="./FotosPaginaWeb/black-myth-wukong-pc-juego-steam-europe-us-canada-cover.jpg" alt="Black Myth Wukong Image" class="imagenJuego">
             <div class="informacionJuegos">
                 <h2>Black Myth: Wukong</h2></br>
