--- a/PaginaWebBootstrap/carrito.html
+++ b/PaginaWebBootstrap/carrito.html
@@ -39,7 +39,7 @@
                     <p class="blanco">Subtotal: <span>60.79€</span></p>
                 </div>
                 <br>
-                <a href="./formularioPago.html"><button class="boton-comprar">Comprar</button></a>
+                <a href="./formularioPagoBootstrap.html"><button class="boton-comprar">Comprar</button></a>
             </div>
         </section>
     </main>
