--- a/PaginaWebBootstrap/infoJuego.html
+++ b/PaginaWebBootstrap/infoJuego.html
@@ -50,7 +50,7 @@
                 
                 <div class="botones">
                     <a href="./carrito.html"><button class="añadir-carrito">Añadir al carrito</button></a>
-                    <a href="./formularioPago.html"><button class="comprar-ahora">Comprar</button></a>
+                    <a href="./formularioPagoBootstrap.html"><button class="comprar-ahora">Comprar</button></a>
                 </div>
                 
             </div>
