formulario de registro e inicio de sesion con Bootstrap

--- a/PaginaWebBootstrap/formularioPagoBootstrap.html
+++ b/PaginaWebBootstrap/formularioPagoBootstrap.html
@@ -31,21 +31,19 @@
         </div>
         <form>
           <div class="products">
-            <h3 class="title">Checkout</h3>
+            <h3 class="title">Método de pago</h3>
             <div class="item">
-              <span class="price">$200</span>
-              <p class="item-name">Product 1</p>
-              <p class="item-description">Lorem ipsum dolor sit amet</p>
+              <span class="price">53.49€</span>
+              <p class="item-name">Dragon Ball: Sparking! ZERO</p>
             </div>
             <div class="item">
-              <span class="price">$120</span>
-              <p class="item-name">Product 2</p>
-              <p class="item-description">Lorem ipsum dolor sit amet</p>
+              <span class="price">49.99€</span>
+              <p class="item-name">Black Myth: Wukong</p>
             </div>
-            <div class="total">Total<span class="price">$320</span></div>
+            <div class="total">Total<span class="price">103.48€</span></div>
           </div>
           <div class="card-details">
-            <h3 class="title">Credit Card Details</h3>
+            <h3 class="title">Detalles de la tarjeta</h3>
             <div class="row">
               <div class="form-group col-sm-7">
                 <label for="card-holder">Nombre del titular de la tarjeta</label>
