--- a/PaginaWebBootstrap/compras.html
+++ b/PaginaWebBootstrap/compras.html
@@ -16,7 +16,7 @@
                 <li>Compras</li>
                 <li><h1 class="nombrePaginaNav">Infogames</h1></li>
                 <li class="iniciarS"><a href="./formularioInicioDeSesion.html">Iniciar Sesión</a></li>
-                <li><a href="./formularioRegistro.html"><button class="botonRegistrarse">Registrarse</button></a></li>
+                <li><a href="./formularioRegistroBoostrap.html"><button class="botonRegistrarse">Registrarse</button></a></li>
                 <li><a href="./carrito.html" class="carrito"><img src="./FotosPaginaWeb/carritoWeb2.png" alt="Carrito"></a></li>
             </ul>
         </nav>
