Correccion del enlace del boton de registro

--- a/PaginaWebBootstrap/formularioPagoBootstrap.html
+++ b/PaginaWebBootstrap/formularioPagoBootstrap.html
@@ -16,8 +16,8 @@
                 <li><a href="./web.html">Noticias</a></li>
                 <li><a href="./compras.html">Compras</a></li>
                 <li><h1 class="nombrePaginaNav">Infogames</h1></li>
-                <li class="iniciarS"><a href="./formularioInicioDeSesion.html">Iniciar Sesión</a></li>
-                <li><a><button class="botonRegistrarse">Registrarse</button></a></li>
+                <li class="iniciarS"><a href="./formularioInicioDeSesionBootstrap.html">Iniciar Sesión</a></li>
+                <li><a href="./formularioRegistroBoostrap.html"><button class="botonRegistrarse">Registrarse</button></a></li>
                 <li><a href="./carrito.html" class="cart"><img src="./FotosPaginaWeb/carritoWeb2.png" alt="Carrito"></a></li>
             </ul>
         </nav>
