--- a/PaginaWebBootstrap/formularioRegistroBoostrap.html
+++ b/PaginaWebBootstrap/formularioRegistroBoostrap.html
@@ -16,7 +16,7 @@
                 <li><a href="./web.html">Noticias</a></li>
                 <li><a href="./compras.html">Compras</a></li>
                 <li><h1 class="nombrePaginaNav">Infogames</h1></li>
-                <li class="iniciarS"><a href="./formularioInicioDeSesion.html">Iniciar Sesión</a></li>
+                <li class="iniciarS"><a href="./formularioInicioDeSesionBootstrap.html">Iniciar Sesión</a></li>
                 <li><a><button class="botonRegistrarse">Registrarse</button></a></li>
                 <li><a href="./carrito.html" class="cart"><img src="./FotosPaginaWeb/carritoWeb2.png" alt="Carrito"></a></li>
             </ul>
@@ -66,7 +66,7 @@
                     data-mdb-ripple-init class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Registrarse</button>
                 </div>
 
-                <p class="tienes-cuenta text-center mt-5 mb-0">¿Ya tienes una cuenta? <a href="#!"
+                <p class="tienes-cuenta text-center mt-5 mb-0">¿Ya tienes una cuenta? <a href="./formularioInicioDeSesionBootstrap.html"
                     class="fw-bold text-white"><u>Iniciar sesión</u></a></p>
 
               </form>
