--- a/PaginaWebBootstrap/formularioInicioDeSesionBootstrap.html
+++ b/PaginaWebBootstrap/formularioInicioDeSesionBootstrap.html
@@ -17,7 +17,7 @@
                 <li><a href="./compras.html">Compras</a></li>
                 <li><h1 class="nombrePaginaNav">Infogames</h1></li>
                 <li class="iniciarS"><a href="./formularioInicioDeSesion.html">Iniciar Sesión</a></li>
-                <li><a><button class="botonRegistrarse">Registrarse</button></a></li>
+                <li><a href="./formularioRegistroBoostrap.html"><button class="botonRegistrarse">Registrarse</button></a></li>
                 <li><a href="./carrito.html" class="cart"><img src="./FotosPaginaWeb/carritoWeb2.png" alt="Carrito"></a></li>
             </ul>
         </nav>
@@ -55,7 +55,7 @@
                           </div>
               
                           <div>
-                            <p class="mb-0">¿No tienes cuenta? <a href="#!" class="text-white-50 fw-bold">Registrarse</a>
+                            <p class="mb-0">¿No tienes cuenta? <a href="./formularioRegistroBoostrap.html" class="text-white-50 fw-bold">Registrarse</a>
                             </p>
                           </div>
               
