--- a/PaginaWebBootstrap/formularioRegistroBoostrap.html
+++ b/PaginaWebBootstrap/formularioRegistroBoostrap.html
@@ -24,7 +24,8 @@
     </header>
 
         <main>
-            <section class="vh-100 bg-image">
+            <section class="vh-100 bg-image"
+            style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
   <div class="mask d-flex align-items-center text-white h-100 gradient-custom-3">
     <div class="container text-white h-100">
       <div class="row d-flex justify-content-center text-white align-items-center h-100">
