--- a/PaginaWebBootstrap/formularioPagoBootstrap.html
+++ b/PaginaWebBootstrap/formularioPagoBootstrap.html
@@ -66,13 +66,30 @@
                 <input id="cvc" type="text" class="form-control" placeholder="CVC" aria-label="Card Holder" aria-describedby="basic-addon1">
               </div>
               <div class="form-group col-sm-12">
-                <button type="button" class="btn btn-primary btn-block ">Comprar</button>
+                <button type="button" class="btn btn-primary btn-block " id="openModalButton">Comprar</button>
               </div>
             </div>
           </div>
         </form>
       </div>
     </section>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Gracias por tu compra</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+              </div>
+              <div class="modal-body">
+                  La compra se ha realizado correctamente
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                  <button type="button" class="btn btn-primary">Continuar comprando</button>
+              </div>
+          </div>
+      </div>
+  </div>
   </main>
   <footer>
     <div class="social-media">
@@ -90,6 +107,9 @@
     </div>
     <p>&copy; 2024 - 2028 Infogames - Política - Términos</p>
 </footer>
-</body>
+<!-- Bootstrap JS y Popper.js -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Archivo JS propio -->
+<script src="modal.js"></script>
 </body>
 </html>
