cambio en las rutas del ccs de bootstrap

--- a/PaginaWebBootstrap/formularioRegistroBoostrap.html
+++ b/PaginaWebBootstrap/formularioRegistroBoostrap.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="./FotosPaginaWeb/logo2Icono.ico">
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../public/bootstrap.css">
     <link rel="stylesheet" href="./css/formularioRegistroBootstrap.css">
 </head>
 <body>
