--- a/PaginaWebBootstrap/formularioPagoBootstrap.html
+++ b/PaginaWebBootstrap/formularioPagoBootstrap.html
@@ -85,7 +85,7 @@
               </div>
               <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                  <button type="button" class="btn btn-primary">Continuar comprando</button>
+                  <a href="./compras.html"><button type="button" class="btn btn-primary">Continuar comprando</button></a>
               </div>
           </div>
       </div>
