--- a/PaginaWebBootstrap/web.html
+++ b/PaginaWebBootstrap/web.html
@@ -47,6 +47,7 @@
                     El cambio, traducido de las notas del parche oficiales publicadas en la web oficial de Bandai Namco, dice lo siguiente:</br>
                     "Cambiada la opción por defecto en el mensaje Vale o Cancelar que aparece cuando utilizamos el Silbato de Corcel Espectral</br> mientras Torrentera está muerto. Ahora la posición por defecto será Vale".
                 </p>
+                <a href="./eventos.html"><button class="botonesEventos">Eventos</button></a>
                 <br>
                 <audio id="audio" autoplay>
                     <source src="./FotosPaginaWeb/Skyrim Theme Song - Full (Dovahkiin Song).mp3">
@@ -78,6 +79,7 @@
                     
                     Estas cifras suponen que Game Science, desarrollador del título, ha obtenido ya el equivalente a unos 961 millones de dólares en facturación.
                 </p>
+                <a href="./eventos.html"><button class="botonesEventos">Eventos</button></a>
             </div>
             
         </section>
@@ -91,6 +93,7 @@
                     una saga que siempre ha estado a la vanguardia, más un sonado salto de calidad frente a la entrega anterior. No solo a base de mejorar lo que ya había, sino a través del empeño por ofrecer esa gran novedad que veníamos pidiendo durante años y acertar de pleno con la idea: el Rush es el arma secreta de una entrega redonda, 
                     no es un modo de juego y ya te adelanto que viene para quedarse.
                 </p>
+                <a href="./eventos.html"><button class="botonesEventos">Eventos</button></a>
             </div>
             <img src="./FotosPaginaWeb/EGS_EASPORTSFC25StandardEdition_EACanada_S1_2560x1440-f650d1a50a08e78279071d931145822a.jpeg" alt="EA Sports FC 25 Image" class="imagenJuego">
         </section>
