--- a/PaginaWebBootstrap/eventos.html
+++ b/PaginaWebBootstrap/eventos.html
@@ -3,31 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eventos Gaming</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .hero {
-            background-color: #343a40;
-            color: white;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-            height: 400px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .event-card:hover {
-            transform: scale(1.05);
-            transition: transform 0.3s;
-        }
-        footer {
-            background-color: #343a40;
-            color: white;
-        }
-    </style>
+    <title>Eventos</title>
+    <link href="../public/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/eventos.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./FotosPaginaWeb/logo2Icono.ico">
 </head>
 <body>
     <!-- Hero Section -->
@@ -45,7 +24,7 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="card event-card border-0 shadow">
-                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Evento 1">
+                        <img src="./FotosPaginaWeb/GAMESCOM-2024.jpg" class="card-img-top" alt="Evento 1">
                         <div class="card-body">
                             <h5 class="card-title">GameCon 2024</h5>
                             <p class="card-text">Fecha: 15 de diciembre, 2024 <br> Ubicación: Centro de Convenciones, México</p>
@@ -55,7 +34,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card event-card border-0 shadow">
-                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Evento 2">
+                        <img src="./FotosPaginaWeb/esc.webp" class="card-img-top" alt="Evento 2">
                         <div class="card-body">
                             <h5 class="card-title">eSports Championship</h5>
                             <p class="card-text">Fecha: 22 de enero, 2025 <br> Ubicación: Arena Global, Los Ángeles</p>
@@ -65,7 +44,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card event-card border-0 shadow">
-                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Evento 3">
+                        <img src="./FotosPaginaWeb/amusement-park-rides.jpg" class="card-img-top" alt="Evento 3">
                         <div class="card-body">
                             <h5 class="card-title">VR Gaming Expo</h5>
                             <p class="card-text">Fecha: 12 de febrero, 2025 <br> Ubicación: Expo Center, Berlín</p>
