--- a/PaginaWebBootstrap/eventos.html
+++ b/PaginaWebBootstrap/eventos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eventos</title>
     <link href="../public/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/eventos.css">
+    <link rel="stylesheet" href="./SASS/eventos.css">
     <link rel="shortcut icon" type="image/x-icon" href="./FotosPaginaWeb/logo2Icono.ico">
 </head>
 <body>
