--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <p>Explora mi página web realizada con HTML y CSS y mi página con Bootstrap</p>
             <a href="./PaginaWeb/web.html" class="btn">Página web</a>
             <a href="./PaginaWebBootstrap/web.html" class="btn">Página web con Bootstrap</a>
+            <a href="./Practica8/index.html" class="btn">Práctica 8</a>
         </section>
     </main>
 </body>
