--- a/Practica8/Practica8JavaScript.html
+++ b/Practica8/Practica8JavaScript.html
@@ -4,41 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario con imágenes</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-        .item {
-            border: 1px solid #ccc;
-            padding: 10px;
-            text-align: center;
-            width: 150px;
-        }
-        .item img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-        button {
-            margin-top: 10px;
-            padding: 5px 10px;
-            cursor: pointer;
-        }
-    </style>
+
+    <link rel="stylesheet" href="./css/Practica8JavaScript.css">
+
 </head>
 <body>
     <h1>Formulario</h1>
     <label for="color-picker">Selecciona un color:</label>
-    <input type="color" id="color-picker">
+    <input type="color" id="color-picker"></br>
     <button onclick="changeBackgroundColor()">Cambiar color de fondo</button>
     <button onclick="addItem()">Añadir más elementos</button>
 
-    <div class="container" id="elementos">
+    <section id="container">
         <div class="item">
             <img src="https://placekitten.com/150/150" alt="Imagen de un gatito">
             <button onclick="changeImage(this)">Cambiar</button>
@@ -59,36 +36,8 @@
             <button onclick="changeImage(this)">Cambiar</button>
             <button onclick="deleteItem(this)">Borrar</button>
         </div>
-    </div>
+    </section>
 
-    <script>
-        function changeBackgroundColor() {
-            const color = document.getElementById("color-picker").value;
-            document.body.style.backgroundColor = color;
-        }
-
-        function addItem() {
-            const container = document.getElementById("elementos");
-            const newItem = document.createElement("div");
-            newItem.classList.add("item");
-            newItem.innerHTML = `
-                <img src="https://placekitten.com/150/150" alt="Imagen de un gatito">
-                <button onclick="changeImage(this)">Cambiar</button>
-                <button onclick="deleteItem(this)">Borrar</button>
-            `;
-            container.appendChild(newItem);
-        }
-
-        function changeImage(button) {
-            const newImageUrl = prompt("Introduce la URL de la nueva imagen:");
-            const img = button.parentElement.querySelector("img");
-            img.src = newImageUrl;
-        }
-
-        function deleteItem(button) {
-            const item = button.parentElement;
-            item.remove();
-        }
-    </script>
+    <script src="./js/Practica8JavaScript.js"></script>
 </body>
 </html>
