--- a/Practica8/Practica8JavaScript.html
+++ b/Practica8/Practica8JavaScript.html
@@ -17,22 +17,22 @@
 
     <section id="container">
         <div class="item">
-            <img src="https://placekitten.com/150/150" alt="Imagen de un gatito">
+            <img src="../Practica8/img/shrek3.jpg" alt="Shrek">
             <button onclick="changeImage(this)">Cambiar</button>
             <button onclick="deleteItem(this)">Borrar</button>
         </div>
         <div class="item">
-            <img src="https://placekitten.com/150/150" alt="Imagen de un gatito">
+            <img src="../Practica8/img/shrek3.jpg" alt="Shrek">
             <button onclick="changeImage(this)">Cambiar</button>
             <button onclick="deleteItem(this)">Borrar</button>
         </div>
         <div class="item">
-            <img src="https://placekitten.com/150/150" alt="Imagen de un gatito">
+            <img src="../Practica8/img/shrek3.jpg" alt="Shrek">
             <button onclick="changeImage(this)">Cambiar</button>
             <button onclick="deleteItem(this)">Borrar</button>
         </div>
         <div class="item">
-            <img src="https://placekitten.com/150/150" alt="Imagen de un gatito">
+            <img src="../Practica8/img/shrek3.jpg" alt="Shrek">
             <button onclick="changeImage(this)">Cambiar</button>
             <button onclick="deleteItem(this)">Borrar</button>
         </div>
