gestion de elememtos con JQuery terminado

--- a/Practica8/Practica8JQuery.html
+++ b/Practica8/Practica8JQuery.html
@@ -22,7 +22,7 @@
     </section>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="./js/Practica8JavaScript.js"></script>
+    <script src="./js/Practica8JQuery.js"></script>
 </body>
 </html>
 
