--- a/Practica8/index.html
+++ b/Practica8/index.html
@@ -98,8 +98,8 @@
 <body>
     <h1>Práctica 8 - Marcos García Castañeda</h1>
     <div class="grid-container">
-        <a href="#" class="grid-item red">Gestión Elementos JS</a>
-        <a href="#" class="grid-item blue">Gestión Elementos JQuery</a>
+        <a href="./Practica8JavaScript.html" class="grid-item red">Gestión Elementos JS</a>
+        <a href="./Practica8JQuery.html" class="grid-item blue">Gestión Elementos JQuery</a>
         <a href="#" class="grid-item green">Human Benchmark JS</a>
         <a href="#" class="grid-item violet">Human Benchmark JQuery</a>
     </div>
