human benchmark terminado

--- a/Practica8/index.html
+++ b/Practica8/index.html
@@ -100,8 +100,8 @@
     <div class="grid-container">
         <a href="./Practica8JavaScript.html" class="grid-item red">Gestión Elementos JS</a>
         <a href="./Practica8JQuery.html" class="grid-item blue">Gestión Elementos JQuery</a>
-        <a href="#" class="grid-item green">Human Benchmark JS</a>
-        <a href="#" class="grid-item violet">Human Benchmark JQuery</a>
+        <a href="./humanBenchmarkJavaScript.html" class="grid-item green">Human Benchmark JS</a>
+        <a href="./humanBenchmarkJQuery.html" class="grid-item violet">Human Benchmark JQuery</a>
     </div>
 </body>
 </html>
