--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="./PaginaWeb/web.html" class="btn">Página web</a>
             <a href="./PaginaWebBootstrap/web.html" class="btn">Página web con Bootstrap</a>
             <a href="./Practica8/index.html" class="btn">Práctica 8</a>
+            <a href="./ReactJuegos/index.html" class="btn">React videojuegos</a>
         </section>
     </main>
 </body>
